--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
-    "lint": "eslint",
-    "format": "prettier",
-    "check": "prettier --write . && eslint --fix"
+    "format": "ultracite check",
+    "lint": "ultracite fix --unsafe",
+    "typecheck": "ultracite check --type-check"
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
