--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite dev --port 3000",
-    "build": "vite build",
-    "preview": "vite preview",
+    "dev": "bun --bun vite dev",
+    "build": "bun --bun vite build",
+    "preview": "bun --bun vite preview",
     "test": "vitest run",
     "format": "ultracite check",
     "lint": "ultracite fix --unsafe",
@@ -13,40 +13,40 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
-    "@fontsource-variable/inter": "^5.2.8",
+    "@fontsource/geist-sans": "^5.2.5",
     "@tabler/icons-react": "^3.36.1",
-    "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/react-devtools": "^0.7.0",
-    "@tanstack/react-router": "^1.132.0",
-    "@tanstack/react-router-devtools": "^1.132.0",
-    "@tanstack/react-router-ssr-query": "^1.131.7",
-    "@tanstack/react-start": "^1.132.0",
-    "@tanstack/router-plugin": "^1.132.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-devtools": "^0.9.2",
+    "@tanstack/react-router": "^1.146.0",
+    "@tanstack/react-router-devtools": "^1.146.0",
+    "@tanstack/react-router-ssr-query": "^1.146.0",
+    "@tanstack/react-start": "^1.146.0",
+    "@tanstack/router-plugin": "^1.146.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "nitro": "latest",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "shadcn": "^3.6.3",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^6.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
-    "@tanstack/devtools-vite": "^0.3.11",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
-    "@vitejs/plugin-react": "^5.0.4",
-    "jsdom": "^27.0.0",
-    "typescript": "^5.7.2",
+    "@tanstack/devtools-vite": "^0.4.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.1",
+    "@types/bun": "^1.3.5",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
+    "jsdom": "^27.4.0",
+    "typescript": "^5.9.3",
     "ultracite": "7.0.10",
-    "vite": "^7.1.7",
-    "vitest": "^3.0.5",
+    "vite": "^7.3.1",
+    "vitest": "^4.0.16",
     "web-vitals": "^5.1.0"
   }
 }
