--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,10 @@
       "cache": false,
       "persistent": true
     },
+    "start": {
+      "dependsOn": ["^start"],
+      "outputs": []
+    },
     "//#format": {},
     "//#fix": {
       "cache": false
