--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,12 +9,13 @@
     "start": "bun dist/index.js"
   },
   "dependencies": {
-    "elysia": "^1.4.21",
     "@elysiajs/cors": "^1.4.1",
-    "@elysiajs/swagger": "^1.3.1"
+    "@t3-oss/env-core": "catalog:",
+    "elysia": "^1.4.21",
+    "zod": "catalog:"
   },
   "devDependencies": {
-    "bun-types": "^1.3.5",
-    "typescript": "^5.9.3"
+    "bun-types": "catalog:",
+    "typescript": "catalog:"
   }
 }
