--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
       "vite-tsconfig-paths": "^6.0.3",
       "typescript": "^5.9.3",
       "bun-types": "^1.3.5",
+      "@t3-oss/env-core": "^0.13.10",
+      "zod": "^4.3.5",
       "@types/bun": "^1.3.5",
       "@types/react": "^19.2.7",
       "@types/react-dom": "^19.2.3"
