--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,5 +1,4 @@
 ARG BUN_VERSION=1.3.5
-ARG SKIP_ENV_VALIDATION=1
 
 FROM oven/bun:${BUN_VERSION} AS deps
 
@@ -10,14 +9,11 @@ COPY apps/api/package.json ./apps/api/package.json
 COPY apps/web/package.json ./apps/web/package.json
 COPY packages/ui/package.json ./packages/ui/package.json
 
-RUN bun install --frozen-lockfile
+RUN bun install
 
 FROM oven/bun:${BUN_VERSION} AS builder
 
 WORKDIR /app
-
-ARG SKIP_ENV_VALIDATION
-ENV SKIP_ENV_VALIDATION=${SKIP_ENV_VALIDATION}
 
 COPY --from=deps /app/node_modules ./node_modules
 COPY --from=deps /app/apps/api/node_modules ./apps/api/node_modules
@@ -33,5 +29,7 @@ FROM oven/bun:${BUN_VERSION} AS runner
 WORKDIR /app
 
 COPY --from=builder /app/apps/web/.output /app/.output
+
+ENV NODE_ENV=production
 
 CMD ["bun", "run", ".output/server/index.mjs"]
