--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,4 +1,4 @@
-ARG BUN_VERSION=1-debian
+ARG BUN_VERSION=1
 
 FROM oven/bun:${BUN_VERSION} AS deps
 
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY package.json bun.lock turbo.json ./
 COPY apps/api/package.json ./apps/api/package.json
 
-RUN bun install
+RUN bun install --frozen-lockfile
 
 FROM oven/bun:${BUN_VERSION} AS builder
 
