--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,4 +1,4 @@
-ARG BUN_VERSION=1-debian
+ARG BUN_VERSION=1
 
 FROM oven/bun:${BUN_VERSION} AS deps
 
@@ -9,7 +9,7 @@ COPY apps/api/package.json ./apps/api/package.json
 COPY apps/web/package.json ./apps/web/package.json
 COPY packages/ui/package.json ./packages/ui/package.json
 
-RUN bun install
+RUN bun install --frozen-lockfile
 
 FROM oven/bun:${BUN_VERSION} AS builder
 
