--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -30,6 +30,9 @@ WORKDIR /app
 
 COPY --from=builder /app/apps/web/.output /app/.output
 
+ARG VITE_API_URL
+
+ENV VITE_API_URL=${VITE_API_URL}
 ENV NODE_ENV=production
 
 CMD ["bun", "run", ".output/server/index.mjs"]
