--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -31,10 +31,10 @@ ARG HOSTNAME
 ARG FRONTEND_URL
 
 ENV NODE_ENV=production
-ENV PORT=${PORT}
-ENV HOSTNAME=${HOSTNAME}
-ENV FRONTEND_URL=${FRONTEND_URL}
+ENV PORT=$PORT
+ENV HOSTNAME=$HOSTNAME
+ENV FRONTEND_URL=$FRONTEND_URL
 
-EXPOSE ${PORT}
+EXPOSE $PORT
 
 CMD ["bun", "run", "dist/index.js"]
