--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,4 +1,7 @@
 ARG BUN_VERSION=1
+ARG PORT
+ARG HOSTNAME
+ARG FRONTEND_URL
 
 FROM oven/bun:${BUN_VERSION} AS deps
 
@@ -18,6 +21,10 @@ COPY --from=deps /app/apps/api/node_modules ./apps/api/node_modules
 
 COPY . .
 
+ENV PORT=$PORT
+ENV HOSTNAME=$HOSTNAME
+ENV FRONTEND_URL=$FRONTEND_URL
+
 RUN bun run build --filter=@virtualpot/api
 
 FROM oven/bun:${BUN_VERSION}-slim AS runner
@@ -25,10 +32,6 @@ FROM oven/bun:${BUN_VERSION}-slim AS runner
 WORKDIR /app
 
 COPY --from=builder /app/apps/api/dist ./dist
-
-ARG PORT
-ARG HOSTNAME
-ARG FRONTEND_URL
 
 ENV NODE_ENV=production
 ENV PORT=$PORT
