--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "bun --watch src/index.ts",
-    "build": "bun build src/index.ts --outdir=dist --target=bun",
-    "start": "bun dist/index.js"
+    "build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile dist/server src/index.ts"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.4.1",
