chore: api build command and update base docker image for bun

--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,5 +1,4 @@
-ARG BUN_VERSION=1
-ARG VITE_API_URL
+ARG BUN_VERSION=1-alpine
 
 FROM oven/bun:${BUN_VERSION} AS deps
 
@@ -23,17 +22,22 @@ COPY --from=deps /app/packages/ui/node_modules ./packages/ui/node_modules
 
 COPY . .
 
-ENV VITE_API_URL=$VITE_API_URL
-
 RUN bun run build
 
 FROM oven/bun:${BUN_VERSION} AS runner
 
 WORKDIR /app
 
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
+COPY --from=builder /app/apps/web/node_modules ./node_modules
+
+RUN chown -R appuser:appuser /app
+
+USER appuser
+
 COPY --from=builder /app/apps/web/.output /app/.output
 
-ENV VITE_API_URL=$VITE_API_URL
 ENV NODE_ENV=production
 
 CMD ["bun", "run", ".output/server/index.mjs"]
