--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "bun --watch src/index.ts",
-    "build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile dist/server src/index.ts"
+    "build": "bun build --compile --minify-whitespace --minify-syntax --target bun-linux-x64 --outfile ./dist/server ./src/index.ts"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.4.1",
