fix: inject variables at build time

--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -22,6 +22,10 @@ COPY --from=deps /app/packages/ui/node_modules ./packages/ui/node_modules
 
 COPY . .
 
+ARG VITE_API_URL
+
+ENV VITE_API_URL=${VITE_API_URL}
+
 RUN bun run build
 
 FROM oven/bun:${BUN_VERSION} AS runner
@@ -31,5 +35,9 @@ WORKDIR /app
 COPY --from=builder /app/apps/web/.output /app/.output
 
 ENV NODE_ENV=production
+
+ARG VITE_API_URL
+
+ENV VITE_API_URL=${VITE_API_URL}
 
 CMD ["bun", "run", ".output/server/index.mjs"]
